# OnyxRoot

./: .gitignore  CMakeLists.txt  README.md
include/onxrt/: onxrt_def.hh  onxrt_ecs.hh  onxrt_mem.hh  onxrt_thr.hh
src/onxed/: CMakeLists.txt
src/onxrt/: CMakeLists.txt  onxrt_thr.cc
